<resources>
    <string name="app_name">KampusChat</string>
    <string name="app_slogan">Feel Unique!</string>

    <string name="text_login">Login</string>
    <string name="text_fullname">Fullname</string>
    <string name="text_username">Username</string>
    <string name="text_department_name">Department Name</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_confirm_password">Confirm Password</string>
    <string name="text_gender">Gender</string>
    <string name="text_age">Age</string>
    <string name="text_select_gender">Select Gender</string>
    <string name="text_date_of_birth">Date of Birth</string>
    <string name="text_forgot_password">Forgot Password?</string>
    <string name="text_do_not_have_account">Get an Account Now</string>
    <string name="text_have_account">Do You Have an Account? Sign in Now</string>
    <string name="text_need_account">Do You Need an Account? Sign up Now</string>
    <string name="text_select_university">Select University</string>
    <string name="text_select_department">Select Department</string>
    <string name="text_back_to_login">Get Back to Login</string>
    <string name="text_reset_password">Reset Password</string>


    <string name="text_male">Male</string>
    <string name="text_female">Female</string>
    <string name="text_done">Done</string>
    <string name="text_verify_email">Verify Email </string>
    <string name="text_code">Code</string>

    <string name="text_likes">Likes</string>
    <string name="text_bans">Bans</string>
    <string name="text_back">Back</string>
    <string name="text_like">Like</string>
    <string name="text_liked">Liked</string>

    <string name="text_lists">List</string>
    <string name="text_shuffle">Shuffle</string>
    <string name="text_profile">Profile</string>
    <string name="text_informations">Informations</string>
    <string name="text_bio">Bio</string>
    <string name="text_change_profile_photo">Change Profile Photo</string>
    <string name="text_match">Match</string>
    <string name="text_matched">You Are Matched !</string>
    <string name="text_start_chat">Start Chat</string>
    <string name="text_shuffle_right_is_done">Your Shuffle Right is Done</string>
    <string name="text_edit_profile">Edit Profile</string>
    <string name="text_update_password">Update Password</string>
    <string name="text_logout">Logout</string>


    <string name="text_please_wait">Please Wait...</string>
    <string name="text_choose_process">Choose a Process</string>
    <string name="text_ban">Ban User</string>
    <string name="text_remove_ban">Remove Ban</string>
    <string name="text_you_are_banned">You are banned by this user</string>
    <string name="text_send_message">Send Message</string>
    <string name="text_show_profile">Show Profile</string>
    <string name="text_default_bio">Hey , This is KampusChat</string>


    <string name="text_notification_title">Message Has Arrived</string>
    <string name="text_notification">You Have an Message! Check it Out Now</string>


    <string name="text_sended_a_photo">Sended A Photo</string>
    <string name="text_message">Message</string>

    <string name="text_online">Online</string>
    <string name="text_offline">Offline</string>
    <string name="text_typing">Typing...</string>

    <string name="text_shuffle_right">Shuffle Count:</string>
    <string name="text_list_empty">No Person is Banned</string>
    <string name="text_chat_list_empty">Your List is Empty!</string>

    <string name="text_chat_list">Chat List</string>
    <string name="text_settings">Settings</string>
    <string name="text_sending">Sending...</string>
    <string name="text_sended">Sended</string>
    <string name="text_seen">Seen!</string>

    <string name="text_yes">Yes!</string>
    <string name="text_no">No!</string>

    <string name="text_ban_user_title">Ban User!</string>
    <string name="text_ban_user_message">Do You Want To Ban This User?</string>

    <string name="error_field_blank">This field cannot be blank</string>
    <string name="error_credentials_invalid">Credentials are invalid</string>
    <string name="error_something_wrong">Something went wrong</string>
    <string name="error_username_taken">Username has already been taken</string>
    <string name="error_email_taken">Email has already been taken</string>
    <string name="error_at_least_2">Enter at least 2 character</string>
    <string name="error_email_not_matched">Enter correct email address</string>
    <string name="error_at_least_6">Enter at least 6 character</string>
    <string name="error_passwords_not_matched">Passwords are not matched</string>
    <string name="error_select_gender">Select Gender</string>
    <string name="error_select_date_of_birth">Select Date Of Birth</string>
    <string name="error_code_invalid">Code is invalid</string>
    <string name="error_email_not_found">Email is not found</string>
    <string name="error_nobody_is_found">Nobody is Found</string>
</resources>
